Fix compile warnings & Add git info to build output